<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/camppic_ll"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="7sp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="7sp"
            android:paddingRight="7sp">

            <TextView
                android:id="@+id/workout"
                style="@style/DoRoutine.main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/workout" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:progressDrawable="@drawable/progressbarstyle" />

            <TextView
                android:id="@+id/thismin"
                style="@style/DoRoutine.next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/thismin" />

            <ImageView
                android:id="@+id/eximage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:layout_marginTop="5sp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/holdspicture" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="7sp"
            android:paddingRight="7sp">

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5sp"
                android:layout_marginTop="10sp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nexttext"
                style="@style/DoRoutine.nextMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nexttext" />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/next_m_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:orientation="vertical" />
            </ScrollView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/camppic_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_LL"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/campimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/camppicture"
            android:visibility="visible" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

    <LinearLayout
        android:id="@+id/button_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/adView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5sp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_start"
                style="@style/DoRoutine.button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_bg"
                android:text="@string/btn_start" />

            <ToggleButton
                android:id="@+id/btn_pause"
                style="@style/DoRoutine.button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_bg"
                android:checked="false"
                android:text="@string/btn_toggl"
                android:textOff="@string/btn_toggl_off"
                android:textOn="@string/btn_toggl_on"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_stop"
            style="@style/DoRoutine.button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/red_bg"
            android:text="@string/btn_stop" />

    </LinearLayout>



</RelativeLayout>
