<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginTop="10sp"
            android:background="@color/blue_bg"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="0dp"
                android:layout_marginBottom="15sp">

                <TextView
                    style="@style/MainActivity.status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="5sp"
                    android:layout_marginStart="5sp"
                    android:text="@string/last_work" />

                <TextView
                    android:id="@+id/main_last_workout"
                    style="@style/MainActivity.text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/last_txt" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_marginBottom="15sp">

                <TextView
                    android:id="@+id/textView7"
                    style="@style/MainActivity.status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="5sp"
                    android:layout_marginStart="5sp"
                    android:text="@string/total_work" />

                <TextView
                    android:id="@+id/main_total_workouts"
                    style="@style/MainActivity.text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/total_txt" />
            </TableRow>

            <TableRow android:layout_width="0dp">

                <TextView
                    style="@style/MainActivity.status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="5sp"
                    android:layout_marginStart="5sp"
                    android:text="@string/avg_work" />

                <TextView
                    android:id="@+id/main_avg_workouts"
                    style="@style/MainActivity.text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/avg_txt" />
            </TableRow>
        </TableLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginTop="10sp"
            android:background="@color/blue_bg"
            android:orientation="vertical">

            <TextView
                style="@style/MainActivity.status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:layout_marginStart="5sp"
                android:layout_marginTop="5sp"
                android:text="@string/routine_text" />

            <LinearLayout
                android:id="@+id/routine_layout_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="5sp"
                android:layout_marginStart="5sp"
                android:background="@color/green_bg"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/main_routine_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white_bg"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <TextView
                style="@style/MainActivity.status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:layout_marginStart="5sp"
                android:text="@string/level_text" />

            <LinearLayout
                android:id="@+id/level_layout_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="5sp"
                android:layout_marginStart="5sp"
                android:background="@color/green_bg"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/main_level_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white_bg" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/main_begin_button"
            style="@style/MainActivity.button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:background="@color/green_button"
            android:text="@string/button_go_main" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp">

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/banner_ad_unit_id">
            </com.google.android.gms.ads.AdView>

            <ImageButton
                android:id="@+id/close_adv"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center|end"
                android:layout_marginRight="3dp"
                android:src="@drawable/delete_icon"
                android:background="@drawable/close_round"
                android:contentDescription="@string/button_close_adv" />


        </FrameLayout>


    </LinearLayout>
</ScrollView>