<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/Setting.title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="15sp"
        android:text="@string/title_time_setup" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="10sp"
        android:background="@color/blue_bg" />

    <TextView
        style="@style/Setting.label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="15sp"
        android:text="@string/headtext" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="20sp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            style="@style/Setting.options"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/pulluptext" />

        <TextView
            style="@style/Setting.options"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:text="@string/shrugtext" />

        <TextView
            style="@style/Setting.options"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/kneetext" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="15sp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/pullupSeconds"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@color/blue_bg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:theme="@style/AppTheme.Picker" />

        <NumberPicker
            android:id="@+id/shrugSeconds"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:background="@color/blue_bg"
            android:orientation="vertical"
            android:theme="@style/AppTheme.Picker" />

        <NumberPicker
            android:id="@+id/kneeSeconds"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@color/blue_bg"
            android:orientation="vertical"
            android:theme="@style/AppTheme.Picker" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="30sp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/button_cancel"
            style="@style/Setting.button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_weight="1"
            android:background="@color/blue_bg"
            android:text="@string/negative_button" />

        <Button
            android:id="@+id/button_set"
            style="@style/Setting.button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_weight="1"
            android:background="@color/blue_bg"
            android:text="@string/positive_button" />

    </LinearLayout>

</LinearLayout>