<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical"
    android:padding="7sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_bg"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            style="@style/LogActivity.th"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_date_title" />

        <TextView
            style="@style/LogActivity.th"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_routine_title" />

        <TextView
            style="@style/LogActivity.th"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_total_title" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_bg">

        <LinearLayout
            android:id="@+id/log_main_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_bg"
            android:orientation="vertical">

        </LinearLayout>


    </ScrollView>
</LinearLayout>